@@ -11,6 +11,7 @@ version 2.1.3.12
 - moved "Grid Increase" / "Grid Decrease" to be beside each other in the hotkey setup
 - fixed a minor bug with displaying texture counts in the browser
 - merged texture and flat browser source code to reduce code duplication (this shouldn't have any effects that are noticeable to you, but please, keep an eye for new bugs with the texture browser)
+- internal changes to how selection is "converted" when switching modes, this should not cause visible behavioral differences, this is just to allow for the new Lua mode to work properly. please report any weird new behavior regarding selection.
 - minor tweaks to status bar flavor text
 - made it so that the initial directory for the file dialog is separate based on whether it's wads, resources, or prefabs
 - fixed a crash when double click editing sectors in make sectors mode
